--- a/app/src/main/res/menu/menu_for_image.xml
+++ b/app/src/main/res/menu/menu_for_image.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/save_image"
-        android:icon="@android:drawable/ic_menu_search"
-        android:title="@string/save_image" />
+        android:title="@string/save_image"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
     <item
         android:id="@+id/copy_link"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/copy_link" />
+        android:title="@string/copy_link"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
     <item
         android:id="@+id/send_link_on_image"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="@string/send_link_on_image" />
+        android:title="@string/send_link_on_image"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
 </menu>
