--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,11 +14,7 @@
         <item name="colorControlHighlight">@color/accent_translucent</item> 
         <item name="android:titleTextStyle">@color/drawer_item_color</item> 
         <item name="colorAccent">@color/accent</item>
-
-        <!--<item name="selectableItemBackground">@drawable/selectable_item_background</item>-->
-        <!--<item name="android:selectableItemBackground">@drawable/selectableItemBackgroundBorderless</item>-->
     </style>
-
 
     <color name="primary">#8b1114</color>
     <color name="text">#b6ff7c3b</color>
@@ -26,4 +22,5 @@
     <color name="accent">#f6ebec</color>
     <color name="accent_translucent">#fff</color>
     <color name="accent_bright">#f6ebec</color>
+    <color name="popup_menu_background">#000000</color>
 </resources>
