--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,13 +1,15 @@
+
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+<com.github.ksoichiro.android.observablescrollview.ObservableListView
         android:id="@+id/lvMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@null"
-        android:dividerHeight="0dp">
-    </ListView>
+        android:dividerHeight="0dp"/>
+
 </android.support.v4.widget.SwipeRefreshLayout>
+
